# athena_nitin_dashboard

./: .gitignore  README.md  TROUBLESHOOTING.md
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  auth.py  bi.py
backend/app/core/: config.py  security.py
backend/app/queries/: __init__.py  bi_queries.py
backend/app/schemas/: auth.py  query.py
backend/app/services/: athena_service.py  auth_service.py  bi_query_service.py  query_service.py
backend/app/utils/: logging.py
frontend/: .env.example  CLEAR_CACHE.bat  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: analytics.ts  auth.ts  bi.ts  client.ts
frontend/src/components/cards/: MetricCard.tsx
frontend/src/components/charts/: ChartWrapper.tsx  ServiceUsageChart.tsx  StatusDistributionChart.tsx  TopTenantsChart.tsx  UnsignedNotesAgingChart.tsx  WeeklyTrendsChart.tsx
frontend/src/components/common/: ProtectedRoute.tsx
frontend/src/components/filters/: FilterIndicator.tsx
frontend/src/config/: env.ts
frontend/src/hooks/: useApi.ts
frontend/src/pages/: AdoptionAnalyticsPage.tsx  AnalyticsPage.tsx  AuditTrailPage.tsx  DashboardPage.tsx  LoginPage.tsx  NotFoundPage.tsx  ServiceUsagePage.tsx  UnsignedNotesPage.tsx  WeeklySummaryPage.tsx
frontend/src/store/: authStore.ts
frontend/src/styles/: colors.ts  theme.ts
frontend/src/types/: analytics.ts  api.ts
frontend/src/utils/: constants.ts  dataUtils.ts  exportUtils.ts
(+7 files in other folders)
